--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,89 @@
 plugins {
     id 'java'
-    // Kotlin 사용 시, 추가로
-    id 'org.jetbrains.kotlin.jvm' version '1.9.0'
-    
-    // Protobuf 플러그인 (com.google.protobuf) 버전
-    id "com.google.protobuf" version "0.9.4"
+    id 'com.google.protobuf' version '0.9.4'
 }
 
-tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
-    kotlinOptions {
-        jvmTarget = "17"
-    }
-}
+group = 'com.example'
+version = '1.0.0'
+sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    // 프로토버퍼 Java 런타임 라이브러리
-    implementation "com.google.protobuf:protobuf-java:3.22.0"
-
-    // (옵션) Kotlin만 쓰는 건 아니지만, Kotlin 프로젝트라면
-    implementation "org.jetbrains.kotlin:kotlin-stdlib"
+    // Protobuf & gRPC
+    implementation 'com.google.protobuf:protobuf-java:3.24.0'
+    implementation 'io.grpc:grpc-protobuf:1.58.0'
+    implementation 'io.grpc:grpc-stub:1.58.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    implementation 'com.google.api.grpc:proto-google-common-protos:2.22.0'
 }
 
-// com.google.protobuf 플러그인 설정
+def grpcVersion = '1.58.0'
+def protobufVersion = '3.24.0'
+
 protobuf {
     protoc {
-        // protoc 컴파일러 버전 지정
-        // (mavenCentral에서 가져와 gradle 캐시에 저장)
-        artifact = "com.google.protobuf:protoc:3.22.0"
+        artifact = "com.google.protobuf:protoc:${protobufVersion}"
     }
+    plugins {
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+        }
+    }
+    generateProtoTasks {
+        all().configureEach { task ->
+            task.builtins {
+                java {}
+            }
+            task.plugins {
+                grpc {}
+            }
+            task.inputs.files fileTree('proto')
+            task.inputs.files fileTree('src/main/proto')
+        }
+    }
+}
 
-    // 결과물(Java 소스)이 생성될 기본 디렉터리 지정
-    // (없으면 기본값은 build/generated/source/proto/...)
-    generatedFilesBaseDir = "$projectDir/src/generated-java"
+sourceSets {
+    main {
+        proto {
+            srcDir 'src/main/proto'
+            include '**/*.proto'
+            srcDir 'proto'
+        }
+        resources {
+            exclude '**/*.proto'
+        }
+    }
+}
 
+// 필요한 task만 활성화하고 나머지는 모두 비활성화
+tasks.all {
+    if (![
+        'clean',
+        'compileJava',
+        'generateProto',
+        'classes',
+        'build'
+    ].contains(it.name)) {
+        it.enabled = false
+    }
+}
+
+// clean task 수정
+clean {
+    delete buildDir
+}
+
+// build 순서 보장
+tasks.compileJava.dependsOn tasks.generateProto
+
+// build task 재정의
+tasks.named('build') {
+    dependsOn 'generateProto', 'compileJava', 'classes'
+    enabled = true
+    tasks.findByName('jar')?.enabled = false
+    tasks.findByName('assemble')?.enabled = false
 }
